--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,13 +28,11 @@ android {
 apply plugin: 'com.neenbedankt.android-apt'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:recyclerview-v7:23.3.0'
-
     compile 'com.mikepenz:iconics-core:2.5.5@aar'
     compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.1@aar'
-
     provided 'javax.annotation:jsr250-api:1.0'
     compile 'org.glassfish:javax.annotation:10.0-b28'
     compile 'com.jakewharton:butterknife:7.0.1'
@@ -48,4 +46,5 @@ dependencies {
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
 }
